# Traki-AI

./: .gitmodules  README.txt  settings.h
demo/: Voltron_11240167.uf2
hardware/: .gitmodules  CMakeLists.txt  build.sh  main.c
software/: build.bat  main.cpp  main.jucer
software/Source/: AudioSettingsDemo.h  Main.cpp
